@@ -181,6 +181,8 @@ enum ldns_enum_rr_type
 	LDNS_RR_TYPE_NSEC3PARAMS = 51,
 	LDNS_RR_TYPE_TLSA = 52, /* RFC 6698 */
 
+	LDNS_RR_TYPE_HIP = 55, /* RFC 5205 */
+
 	/** draft-reid-dnsext-zs */
 	LDNS_RR_TYPE_NINFO = 56,
 	/** draft-reid-dnsext-rkey */
